feat: Add installation guides for macOS/Linux and Windows, including quick start instructions
docs: Create README file with project overview, features, and usage instructions

feat: Implement intelligent search bar with real-time suggestions and filtering

chore: Add utility scripts for macOS/Linux and Windows to streamline development tasks

fix: Enhance run scripts for better error handling and user feedback during setup

docs: Update documentation files to reflect new features and installation processes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,49 @@
+# Environnement virtuel Python
 venv/
+env/
+ENV/
+.venv
+
+# Fichiers de cache Python
 __pycache__/
 *.py[cod]
-.env
-*.egg-info/
-.idea/
-.vscode/
-dist/
+*$py.class
+*.so
+.Python
 build/
-pip-wheel-metadata/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Base de données SQLite (optionnel - décommenter pour l'inclure en git)
+# backend/cinema.db
+
+# Fichiers IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Fichiers de système
+Thumbs.db
+.DS_Store
+
+# Fichiers d'environnement
+.env
+.env.local
+
+# Logs
+*.log
